Fixed transparency on PNGs and added the new globe sneak preview

--- a/css/viziatalk.css
+++ b/css/viziatalk.css
@@ -26,4 +26,6 @@ html, body, .reveal div, .reveal span, .reveal applet, .reveal object, .reveal i
 }
 .reveal section img {
     border: 0;
+    background: transparent;
+    box-shadow: none;
 }
